tests/ui/attributes/dont-allow-inline-and-repr-at-invalid-positions.stderr
error: `#[inline]` attribute cannot be used on structs
  --> $DIR/dont-allow-inline-and-repr-at-invalid-positions.rs:3:5
   |
LL |     #[inline] struct Foo;
   |     ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/dont-allow-inline-and-repr-at-invalid-positions.rs:4:12
   |
LL |     #[repr(C)] fn foo() {}
   |            ^   ----------- not a struct, enum, or union

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0517`.
